--- a/templates/kubernetes/gke-cluster.jinja
+++ b/templates/kubernetes/gke-cluster.jinja
@@ -90,7 +90,7 @@ resources:
         httpLoadBalancing:
           disabled: false
         horizontalPodAutoscaling:
-          disabled: false
+          disabled: true
         gcePersistentDiskCsiDriverConfig:
           enabled: false
         
