--- a/config.jinja
+++ b/config.jinja
@@ -72,7 +72,7 @@ resources:
     dependsOn:
     - boomi-gke-cluster
 
-- name: boomi-cloudbuild
+- name: boomi-gke-cloudbuild
   type: cloudbuild.jinja
   properties:
     region: {{ REGION }}
@@ -88,7 +88,7 @@ resources:
     - boomi-gke-cluster
     - file-store
 
-- name: boomi-bastion
+- name: boomi-gke-bastion
   type: bastion.jinja
   properties:
     region: {{ REGION }}
@@ -104,3 +104,4 @@ resources:
     dependsOn:
     - boomi-gke-network
     - boomi-gke-cluster
+    - boomi-gke-cloudbuild
