--- a/templates/network/network.jinja
+++ b/templates/network/network.jinja
@@ -13,6 +13,7 @@ resources:
   type: compute.v1.network
   properties:
     name: {{ vpcName }}
+    description: {{ vpcName }}
     autoCreateSubnetworks: false
 
 # GCP Public Subnets
@@ -20,6 +21,7 @@ resources:
   type: compute.v1.subnetwork
   properties:
     name: {{ publicSubnet }}
+    description: {{ publicSubnet }}
     network: $(ref.{{ vpcName }}.selfLink)
     ipCidrRange: {{ publicSubnetCIDR }}
     region: {{ region }}
@@ -30,16 +32,19 @@ resources:
   type: compute.v1.subnetwork
   properties:
     name: {{ privateSubnet }}
+    description: {{ publicSubnet }}
     network: $(ref.{{ vpcName }}.selfLink)
     ipCidrRange: {{ privateSubnetCIDR }}
     region: {{ region }}
+    privateIpGoogleAccess: true
     enableFlowLogs: true
 
 # GCP Firewall Rules
-- name: {{ deployment + '-firewall-allow-ssh-rdp' }}
+- name: {{ deployment + '-allow-ssh-rdp' }}
   type: compute.v1.firewall
   properties:
-    name: {{ deployment + '-firewall-allow-ssh-rdp' }}
+    name: {{ deployment + '-allow-ssh-rdp' }}
+    description: {{ deployment + '-allow-ssh-rdp' }}
     network: $(ref.{{ vpcName }}.selfLink)
     sourceRanges: ["0.0.0.0/0"]
     allowed:
@@ -50,10 +55,11 @@ resources:
     logConfig:
       enable: true
 
-- name: {{ deployment + '-firewall-allow-http-https' }}
+- name: {{ deployment + '-allow-http-https' }}
   type: compute.v1.firewall
   properties:
-    name: {{ deployment + '-firewall-allow-http-https' }}
+    name: {{ deployment + '-allow-http-https' }}
+    description: {{ deployment + '-allow-http-https' }}
     network: $(ref.{{ vpcName }}.selfLink)
     sourceRanges: ["0.0.0.0/0"]
     allowed:
@@ -62,10 +68,11 @@ resources:
     logConfig:
       enable: true
 
-- name: {{ deployment + '-firewall-allow-icmp' }}
+- name: {{ deployment + '-allow-icmp' }}
   type: compute.v1.firewall
   properties:
-    name: {{ deployment + '-firewall-allow-icmp' }}
+    name: {{ deployment + '-allow-icmp' }}
+    description: {{ deployment + '-allow-icmp' }}
     network: $(ref.{{ vpcName }}.selfLink)
     sourceRanges: ["0.0.0.0/0"]
     allowed:
@@ -73,17 +80,6 @@ resources:
       ports: []
     logConfig:
       enable: true
-
-- name: {{ deployment }}-route
-  type: compute.v1.route
-  properties:
-    name: {{ deployment }}-route
-    description: route with default internet gateway
-    network: $(ref.{{ vpcName }}.selfLink)
-    priority: 1
-    destRange: 0.0.0.0/0
-    nextHopGateway: https://www.googleapis.com/compute/v1/projects/{{ env["project"] }}/global/gateways/default-internet-gateway
-
 
 - name: {{ deployment }}-{{ region }}-cloud-router
   type: compute.v1.router
