--- a/NewVPC.jinja
+++ b/NewVPC.jinja
@@ -80,6 +80,7 @@ resources:
     CLUSTER_NAME: $(ref.boomi-gke-cluster.gkeClusterName)
     ipaddress: $(ref.file-store.fileShareIp)
     reservedIpRange: $(ref.file-store.reservedIpRange)
+    ingress_staticIpName: $(ref.boomi-gke-network.ingress_staticIpName)
     username: {{ properties["BoomiUsername"] }}
     password: {{ properties["BoomiPassword"] }}
     account: {{ properties["BoomiAccount"] }}
