--- a/templates/network/network.jinja
+++ b/templates/network/network.jinja
@@ -1,9 +1,9 @@
 {% set project = env["project"] %}
 {% set deployment = env["deployment"] %}
 {% set region = properties["region"] %}
-{% set vpcName = deployment + "-gke-network" %}
-{% set publicSubnet = deployment + "-" +  region  + '-public-subnet' %}
-{% set privateSubnet = deployment + "-" +  region + '-private-subnet' %}
+{% set vpcName = properties["vpcName"] %}
+{% set publicSubnet= properties["publicSubnetName"] %}
+{% set privateSubnet= properties["privateSubnetName"] %}
 {% set publicSubnetCIDR = properties["publicSubnetCIDR"] %}
 {% set privateSubnetCIDR = properties["privateSubnetCIDR"] %}
 
