--- a/NewVPC.jinja
+++ b/NewVPC.jinja
@@ -66,7 +66,7 @@ resources:
   type: file-store.jinja
   properties:
     zone: {{ properties["zone"] }}
-    network: $(ref.boomi-gke-network.VpcName)
+    network: {{ VPC_NAME }}
     size: 1024
   metadata:
     dependsOn:
@@ -76,7 +76,7 @@ resources:
   type: cloudbuild.jinja
   properties:
     region: {{ REGION }}
-    network: $(ref.boomi-gke-network.VpcName)
+    network: {{ VPC_NAME }}
     CLUSTER_NAME: $(ref.boomi-gke-cluster.gkeClusterName)
     ipaddress: $(ref.file-store.fileShareIp)
     reservedIpRange: $(ref.file-store.reservedIpRange)
@@ -93,8 +93,8 @@ resources:
   properties:
     region: {{ REGION }}
     zone: {{ properties["zone"] }}
-    network: $(ref.boomi-gke-network.VpcRef)
-    subnet: $(ref.boomi-gke-network.PublicSubnetRef)
+    network: $(ref.{{ VPC_NAME }}.selfLink)
+    subnet: $(ref.{{ PUBLIC_SUBNET_NAME }}.selfLink)
     machineType: {{ properties["machineType"] }}
     machineImage: {{ properties["machineImage"] }}
     targetSize: {{ properties["targetSize"] }}
