--- a/templates/network/network.jinja
+++ b/templates/network/network.jinja
@@ -15,108 +15,11 @@ resources:
   properties:
     name: {{ vpcName }}
     description: {{ vpcName }}
-    autoCreateSubnetworks: false
-
-# GCP Public Subnets
-- name: {{ publicSubnet }}
-  type: compute.v1.subnetwork
-  properties:
-    name: {{ publicSubnet }}
-    description: {{ publicSubnet }}
-    network: $(ref.{{ vpcName }}.selfLink)
-    ipCidrRange: {{ publicSubnetCIDR }}
-    region: {{ region }}
-    enableFlowLogs: true
-
-# GCP Private Subnets
-- name: {{ privateSubnet }}
-  type: compute.v1.subnetwork
-  properties:
-    name: {{ privateSubnet }}
-    description: {{ publicSubnet }}
-    network: $(ref.{{ vpcName }}.selfLink)
-    ipCidrRange: {{ privateSubnetCIDR }}
-    region: {{ region }}
-    privateIpGoogleAccess: true
-    enableFlowLogs: true
-
-# GCP Firewall Rules
-- name: {{ deployment + '-allow-ssh-rdp' }}
-  type: compute.v1.firewall
-  properties:
-    name: {{ deployment + '-allow-ssh-rdp' }}
-    description: {{ deployment + '-allow-ssh-rdp' }}
-    network: $(ref.{{ vpcName }}.selfLink)
-    sourceRanges: ["0.0.0.0/0"]
-    allowed:
-    - IPProtocol: TCP
-      ports: [22, 3389]
-    targetTags: 
-    - allow-ssh-rpd
-    logConfig:
-      enable: true
-
-- name: {{ deployment + '-allow-http-https' }}
-  type: compute.v1.firewall
-  properties:
-    name: {{ deployment + '-allow-http-https' }}
-    description: {{ deployment + '-allow-http-https' }}
-    network: $(ref.{{ vpcName }}.selfLink)
-    sourceRanges: ["0.0.0.0/0"]
-    allowed:
-    - IPProtocol: TCP
-      ports: [80, 443]
-    logConfig:
-      enable: true
-
-- name: {{ deployment + '-allow-icmp' }}
-  type: compute.v1.firewall
-  properties:
-    name: {{ deployment + '-allow-icmp' }}
-    description: {{ deployment + '-allow-icmp' }}
-    network: $(ref.{{ vpcName }}.selfLink)
-    sourceRanges: ["0.0.0.0/0"]
-    allowed:
-    - IPProtocol: ICMP
-      ports: []
-    logConfig:
-      enable: true
-
-- name: {{ deployment }}-{{ region }}-cloud-router
-  type: compute.v1.router
-  properties:
-    name: {{ deployment }}-{{ region }}-cloud-router
-    description: route with default internet gateway
-    network: $(ref.{{ vpcName }}.selfLink)
-    region: {{ region }}
-    nats:
-    - name: {{ deployment }}-{{ region }}-nat
-      natIpAllocateOption: "AUTO_ONLY"
-      sourceSubnetworkIpRangesToNat: "LIST_OF_SUBNETWORKS"
-      subnetworks: 
-      - name: $(ref.{{ privateSubnet }}.selfLink)
-        sourceIpRangesToNat: ["PRIMARY_IP_RANGE"]
-
-- name: {{ deployment }}-ingress-static-ip
-  type: compute.v1.globalAddress
-  properties:
-    name: {{ deployment }}-ingress-static-ip
-    description: {{ deployment }}-ingress-static-ip
-    ipVersion: IPV4
-    networkTier: PREMIUM
+    autoCreateSubnetworks: {{ properties["autoCreateSubnetworks"] }}
 
 outputs:
-- name: VpcName
+- name: Boomi-VpcName
   value: $(ref.{{ vpcName }}.name)
 
-- name: VpcRef
+- name: Boomi-VpcSelfLink
   value: $(ref.{{ vpcName }}.selfLink)
-
-- name: PrivateSubnetRef
-  value: $(ref.{{ privateSubnet }}.selfLink)
-
-- name: PublicSubnetRef
-  value: $(ref.{{ publicSubnet }}.selfLink)
-
-- name: ingressStaticIpName
-  value: $(ref.{{ deployment + '-ingress-static-ip' }}.name)
